Fixed spacing

--- a/src/pages/Artist/components/Header/Header.scss
+++ b/src/pages/Artist/components/Header/Header.scss
@@ -202,7 +202,7 @@ header {
 }
 
 .popup-btn-wrapper {
-  padding-top: 24px;
+  padding-top: 7px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 24px;
